# tap-hubspot

./: .gitignore  CHANGELOG.md  Pipfile  README.md  pyproject.toml
.github/workflows/: veracode-cursor-agent-fix.yml  veracode-static-scan.yml
tap_hubspot/: __init__.py
tap_hubspot/schemas/: owners.json
tap_hubspot/tests/: utils.py
tests/: base.py  client.py
