[tool.poetry]
name = "tap-hubspot"
version = "3.0.0"
description = "Singer.io tap for extracting data from the HubSpot API"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "^3.13.0"
attrs = "25.4.0"
singer-python = "6.3.0"
requests = "^2.32.0"
backoff = "2.2.1"
requests-mock = "1.12.1"

[tool.poetry.dev-dependencies]
pylint = "2.5.3"
nose = "1.3.7"

[tool.poetry.scripts]
tap-hubspot = "tap_hubspot:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
